--- a/Solution/ActivityLauncher.Client/Locales/CommonLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/CommonLocales.fr.resx
@@ -144,4 +144,10 @@
   <data name="Navigation.About" xml:space="preserve">
     <value>À propos</value>
   </data>
+  <data name="NotifyError.DetailsButtonLabel" xml:space="preserve">
+    <value>Détails</value>
+  </data>
+  <data name="ErrorDetailsDialog.CloseButton" xml:space="preserve">
+    <value>Fermer</value>
+  </data>
 </root>
