--- a/Solution/ActivityLauncher.Client/Locales/CommonLocales.en.resx
+++ b/Solution/ActivityLauncher.Client/Locales/CommonLocales.en.resx
@@ -150,4 +150,7 @@
   <data name="ErrorDetailsDialog.CloseButton" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="NotifyError.DialogTitle" xml:space="preserve">
+    <value>Error details</value>
+  </data>
 </root>
