--- a/Solution/ActivityLauncher.Client/Locales/ConfigurationPageLocales.en.resx
+++ b/Solution/ActivityLauncher.Client/Locales/ConfigurationPageLocales.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Errors.CreateStartupFileDemoFailed" xml:space="preserve">
+    <value>An error occurred while creating the startup script example. It is possible that the data folder you have chosen does not allow its contents to be modified by the application. Details: {0}</value>
+  </data>
   <data name="Errors.EmptyFileStorage" xml:space="preserve">
     <value>Please choose a folder for this applications data!</value>
   </data>
@@ -124,7 +127,7 @@
     <value>Please choose an existing folder for this applications data!</value>
   </data>
   <data name="Errors.SetupActivitiesStoreFailed" xml:space="preserve">
-    <value>An error occurred while creating the folder containing the activities. It is possible that the data folder you have chosen does not allow its contents to be modified by the application.. Details: {0}</value>
+    <value>An error occurred while creating the folder containing the activities. It is possible that the data folder you have chosen does not allow its contents to be modified by the application. Details: {0}</value>
   </data>
   <data name="FileStorage.FolderPicker.Label" xml:space="preserve">
     <value>Select a folder</value>
