--- a/Solution/ActivityLauncher.Client/Locales/ConfigurationPageLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/ConfigurationPageLocales.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Errors.CreateStartupFileDemoFailed" xml:space="preserve">
+    <value>Une erreur est survenue lors de la création de l'exemple de script de démarrage. Il est possible que le dossier de sauvegarde que vous avez choisi ne permette pas la modification de son contenu par l'application. Détails : {0}</value>
+  </data>
   <data name="Errors.EmptyFileStorage" xml:space="preserve">
     <value>Veuillez choisir un dossier pour la sauvegarde des données de l'application !</value>
   </data>
