--- a/Solution/ActivityLauncher.Client/Locales/ActivityLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/ActivityLocales.fr.resx
@@ -298,13 +298,13 @@
     <value>Script PowerShell</value>
   </data>
   <data name="Task.Dialog.TerminalTask.HelperTooltip" xml:space="preserve">
-    <value>Cette tâche vous permet d'ouvrir un ou plusieurs onglets dans Windows Terminal. Pour chaque onglet, vous pouvez choisir le titre et la couleur de l'onglet, l'emplacement par défaut et la commande par défaut à exécuter dans l'onglet. Tous les paramètres sont facultatifs si vous souhaitez simplement ouvrir un onglet vide.</value>
+    <value>Cette tâche vous permet d'ouvrir un ou plusieurs onglets dans Windows Terminal (Windows Terminal doit être installé sur votre machine pour que la fonctionnalité soit disponible). Pour chaque onglet, vous pouvez choisir le titre et la couleur de l'onglet, l'emplacement par défaut et la commande par défaut à exécuter dans l'onglet. Tous les paramètres sont facultatifs si vous souhaitez simplement ouvrir un onglet vide.</value>
   </data>
   <data name="Task.TerminalTask.Title" xml:space="preserve">
     <value>Windows Terminal</value>
   </data>
   <data name="Task.Dialog.VSCodeTask.HelperTooltip" xml:space="preserve">
-    <value>Cette tâche vous permet d'ouvrir un répertoire d'espace de travail dans Visual Studio Code.</value>
+    <value>Cette tâche vous permet d'ouvrir un répertoire d'espace de travail dans Visual Studio Code (Visual Studio Code doit être installé sur votre machine pour que la fonctionnalité soit disponible).</value>
   </data>
   <data name="Task.VSCodeTask.Title" xml:space="preserve">
     <value>Visual Studio Code</value>
