--- a/Solution/ActivityLauncher.Client/Locales/AboutPageLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/AboutPageLocales.fr.resx
@@ -127,7 +127,13 @@
     <value>Activity Launcher pour Windows est un outil conçu pour Windows et pour les développeurs ou utilisateurs avancés voulant accélérer leur flux de travail et activités sur leur machine. Créez des activités en quelques clics pour lancer toutes sortes de tâches rapidement ou au démarrage de votre machine. Quelques tâches prédéfinies sont disponibles mais l'application vous laisse la flexibilité de définir les tâches que vous voulez grâce à la puissance des scripts PowerShell.</value>
   </data>
   <data name="Disclaimer.Content" xml:space="preserve">
-    <value>Cette application ne va créer ou modifier des fichiers que dans le repertoire que vous lui fournissez dans la page de configuration. En revanche, il est de votre responsabilité de vérifier que les scripts que vous ajoutez dans vos activités sont sans risque pour votre machine. Pour que l'application fonctionne, vous devez avoir un version récente de PowerShell installé sur votre machine.</value>
+    <value>Cette application est conçue pour exécuter des créer et exécuter des scripts uniquement dans le répertoire spécifié dans la page de configuration. Cependant, l'utilisation des scripts par l'utilisateur est de sa propre responsabilité. Nous déclinons toute responsabilité pour les conséquences découlant de l'exécution des scripts fournis par l'utilisateur. Il est recommandé à l'utilisateur de faire preuve de prudence et de diligence lors de l'exécution de tout script, et de s'assurer de comprendre pleinement son fonctionnement et ses implications avant de le lancer (vous pouvez pour cela toujours vérifier le contenu du script généré avant de le lancer).</value>
+  </data>
+  <data name="Disclaimer.OptionalSoftware" xml:space="preserve">
+    <value>Certaines tâches préconfigurées utilisent des applications telles que Windows Terminal ou Visual Studio Code pour fonctionner, cependant, leur installation n'est requise que si vous souhaitez exécuter ces tâches spécifiques.</value>
+  </data>
+  <data name="Disclaimer.Requirements" xml:space="preserve">
+    <value>Pour que l'application fonctionne, vous devez avoir un version récente de PowerShell installé sur votre machine (requis).</value>
   </data>
   <data name="Disclaimer.Title" xml:space="preserve">
     <value>Avertissements</value>
@@ -136,7 +142,7 @@
     <value>Mise en place du lancement au démarrage</value>
   </data>
   <data name="Startup.Setup.Instructions" xml:space="preserve">
-    <value>TODO</value>
+    <value>Pour que toutes les activités que vous avez paramétrées pour s'exécuter au démarrage soient lançées lors de la mise en route de votre machine, vous devez faire en sorte que le fichier &lt;code style="font-weight: bold;"&gt;{0}&lt;/code&gt; soit exécuté au lancement de Windows. Pour cela, vous pouvez simplement le copier/coller le fichier dans le repertoire que Windows utilise pour lancer des applications au démarage (ce dossier est spécifique à votre utilisateur, remplacez donc &lt;i&gt;{{YOUR_USER}}&lt;/i&gt; par votre nom d'utilisateur), le repertoire en question devrait être &lt;code style="font-weight: bold;"&gt;{1}&lt;/code&gt;.</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>À propos</value>
